# AndroidNdkExample

./: readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dfanr/androidndkexample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/dfanr/androidndkexample/: MainActivity.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dfanr/androidndkexample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
